--- a/style.css
+++ b/style.css
@@ -13,12 +13,13 @@ body {
 .logo {
     width: 300px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 20px auto;
 }
 
 main{
     width: 375px;
     background: #F4F4F4;
     border-radius: 20px;
+    margin: 0 auto;
+
 }
