--- a/style.css
+++ b/style.css
@@ -21,5 +21,11 @@ main{
     background: #F4F4F4;
     border-radius: 20px;
     margin: 0 auto;
+    padding: 44px 24px 23px;
+}
 
+label {
+    color: #777777;
+    font-weight: 400;
+    font-size: 14px;
 }
