ajustes na fonte

--- a/style.css
+++ b/style.css
@@ -40,4 +40,7 @@ select {
     margin-bottom: 24px;
     appearance: none;
     padding-left: 18px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #555555;
 }
