--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ label {
     font-size: 14px;
 }
 
-select {
+select, input {
     background: #FFFFFF;
     border: 1px solid #BBBBBB;
     border-radius: 4px;
