--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ select, input {
     font-weight: 700;
     font-size: 16px;
     color: #555555;
+    cursor: pointer;
 }
 
 button {
@@ -50,4 +51,17 @@ button {
     border-radius: 5px;
     width: 100%;
     border: none;
+    height: 48px;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+button:active {
+    opacity: 0.6;
 }
