--- a/style.css
+++ b/style.css
@@ -65,3 +65,14 @@ button:hover {
 button:active {
     opacity: 0.6;
 }
+
+section {
+    border: 1px solid #772FD3;
+    border-radius: 20px;
+    margin-top: 36px;
+    padding: 12px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
