--- a/style.css
+++ b/style.css
@@ -81,3 +81,9 @@ section {
     margin: 15px 0;
 }
 
+.currency-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+}
