--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ main{
     width: 375px;
     background: #F4F4F4;
     border-radius: 20px;
-    margin: 0 auto;
+    margin: 0 auto 40px;
     padding: 44px 24px 23px;
 }
 
@@ -71,7 +71,6 @@ section {
     border-radius: 20px;
     margin-top: 36px;
     padding: 12px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
